--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ a:hover {
     background-color: #FFDD00;
 }
 
-#emoticon-list, #faq {
+#emoticon-list, #faq, .fb-like {
     margin-top: 40px;
 }
 #emoticon-list h2, #faq h2 {
@@ -128,6 +128,7 @@ a:hover {
     padding: 20px 10px 0px 10px;
     font-size: .8em;
 }
+
 .content {
     background-color: #FFF !important;
     border-radius: 3px;
